--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
+
 @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 * {
   margin: 0;
@@ -12,4 +12,5 @@ html {
 
 body {
   background-color: #ffba00;
+  font-family: "Righteous", cursive;
 }
