--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,9 @@
   padding: 0;
 }
 
-html {
-  font-size: 1rem;
-}
-
 body {
   background-color: black;
   color: white;
   font-family: "Righteous", cursive;
+  font-size: 16px;
 }
