style css changed

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: black;
+  background-color: #161515;
   color: white;
   font-family: "Righteous", cursive;
   font-size: 16px;
