--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,6 @@ body {
   font-family: "Righteous", cursive;
   font-size: 16px;
 }
+.css-1ex1afd-MuiTableCell-root {
+  padding: none !important;
+}
